# OpenDataDetector

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
ci/: analyse_combine_showers.py  analyse_single_shower.py  compare_hashes.sh  composition_config.json  download_geant4_data.sh  export_geometry_config.json  export_geometry_gdml2tgeo.C  full_chain_odd.py  graphCmp.py  make_detector_plot.py  make_material_plots.py  material_budget_dd4hep.sh  material_budget_dd4hep_plots.py  material_budget_steering.txt  material_composition.sh  requirements.in  requirements.txt  run_material_recording.py
ci/reference/: combined_performance_ECalBarrel.root  combined_performance_ECalEndcap.root  commit.txt  material_budget_dd4hep.root  material_composition.root  performance_ckf.root  performance_seeding_hists.root
config/: odd-digi-geometric-config.json  odd-digi-smearing-config-time.json  odd-material-config.json
data/: .gitattributes  odd-bfield.root  odd-material-maps.root
factory/: CMakeLists.txt
factory/calorimeter/: ODDECalBarrel_geo.cpp  ODDECalEndcap_geo.cpp
factory/tracker/: ODDCylinder_geo.cpp  ODDDriftChamber_geo.cpp  ODDHelper.hpp  ODDModuleHelper.cpp  ODDModuleHelper.hpp  ODDPixelBarrel_geo.cpp  ODDPixelEndcap_geo.cpp  ODDServiceHelper.hpp  ODDStripBarrel_geo.cpp  ODDStripEndcap_geo.cpp
xml/: OpenDataBeamPipe.xml  OpenDataCalorimeter.xml  OpenDataDC.xml  OpenDataDetector.xml  OpenDataDetectorDC.xml  OpenDataDetectorEnvelopes.xml  OpenDataDetectorIdentifiers.xml  OpenDataDetectorPlugins.xml  OpenDataDetectorPluginsDC.xml  OpenDataECal.xml  OpenDataHCal.xml  OpenDataLongStrips.xml  OpenDataMaterialBinning.xml  OpenDataMaterials.xml  OpenDataPixels.xml  OpenDataShortStrips.xml  OpenDataSolenoid.xml  OpenDataTracker.xml  OpenDataTrackerDC.xml  OpenDataVisualization.xml
